tests/testcases/errors/BCE0065-1.boo
"""
BCE0065-1.boo(8,20): BCE0065: Can't iterate over expression of type 'System.Void'.
BCE0065-1.boo(11,13): BCE0065: Can't iterate over expression of type 'System.Int32'.
"""
def GetIter():
	pass
	
for item in GetIter():
	pass
	
for item in 3:
	pass
